fixed the 1px horizontal scroll on mobile @julianlam

--- a/manifest/source/mobile.less
+++ b/manifest/source/mobile.less
@@ -297,6 +297,7 @@
 
 	body {
 		overflow-y: scroll;
+		overflow-x: hidden;
 	}
 
 	.content.subpage {
